Plugin Name: CoursePress Pro
Author: Marko Miljus ( Incsub ) / Rheinard Korf ( Incsub )

CHANGE LOG
=================================================

1.0.3
-------------------------------------------------
- Improved security
- Resolved CSS issues with MarketPress popup called from CoursePress
- Fixed issue with theme location in the CoursePress theme

1.0.2
-------------------------------------------------
- Resolved issue with mobile menu
- Resolved issue with listing images, videos and overlapping content in the CoursePress theme
- Responsive fixes for admin pages

1.0.1
-------------------------------------------------
- Resolved issue with deleting media files (selected in elements) upon deleting a unit or a module.

1.0.0
-------------------------------------------------
- 1.0 First Release.