@@ -9,6 +9,7 @@ CHANGE LOG
 - Improved security
 - Resolved CSS issues with MarketPress popup called from CoursePress
 - Fixed issue with theme location in the CoursePress theme
+- Fixed CSS issue with uploaded videos in CoursePress theme (plus better responsive)
 
 1.0.2
 -------------------------------------------------
